--- a/act_menu_2.5.3
+++ b/act_menu_2.5.3
@@ -2,7 +2,7 @@ import time
 import os
 
 saldo_usuario = 200000
-saldo_cred = -100000
+saldo_cred = 100000
 opc = 0
 n_compra = 0
 saldo_compra = 0
@@ -29,14 +29,15 @@ while True:
             os.system("cls")
             try:
                 print("--- Pagar tarjeta de crédito ---")
+                print(f"Posee una deuda de {saldo_cred}")
                 pago = int(input("Ingrese cantidad a pagar: "))
             except ValueError:
                 print("Error, se ha ingresado un número no válido.")
                 time.sleep(2)
                 os.system("cls")
             else:
-                if pago <= saldo_usuario:
-                    saldo_cred += pago
+                if pago <= saldo_usuario and pago <= saldo_cred:
+                    saldo_cred -= pago
                     saldo_usuario -= pago
                     print("Pago realizado exitosamente.")
                     print(f"Su nuevo saldo es de {saldo_usuario}, y presenta una deuda de {saldo_cred}")
@@ -46,8 +47,14 @@ while True:
                     print("No posee suficientes fondos.")
                     time.sleep(4)
                     os.system("cls")
+                elif saldo_cred == 0:
+                    print("No posee deudas en su tarjeta de crédito.")
+                    time.sleep(4)
+                    os.system("cls")
                 else:
                     print("Monto a pagar no válido.")
+                    time.sleep(4)
+                    os.system("cls")
         
         if opc == 3:
             try:
